--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.10.2",
+    "react-bootstrap-4-pagination": "^1.0.4",
     "react-dom": "^18.1.0",
+    "react-icons": "^5.2.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3"
   },
@@ -19,7 +28,6 @@
     "eject": "react-scripts eject",
     "lint:js": "eslint src/**/*.{js,jsx}"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
